// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table slabs {
  id uuid [primary key]
  bundle_id uuid [ref: > bundles.id]
  container_id uuid [ref: > containers.id]
  bundle_position int
  material_id uuid [ref: > materials.id]
  quality_grade enum
  supplier_id uuid [ref: > suppliers.id]
  barcode varchar(255) [unique]
  landed_cost_cents bigint
  fob_cost_cents bigint
  created_at timestamp [default: `now()`]
}

Table slab_dimensions {
  id uuid [primary key]
  slab_id uuid [ref: - slabs.id]
  stage enum
  length_mm decimal(7,2)
  width_mm decimal(7,2)
  area_mm2 decimal [note: "GENERATED ALWAYS AS (length_mm * width_mm)"]
  thickness_mm decimal(5,2)
  indexes {
    (slab_id, stage) [unique]
  }
}

Table materials {
  id uuid [primary key]
  material_name varchar(255) [not null]
  material_type enum [not null]
  color_family enum
  indexes {
    (material_name, material_type) [unique]
  }
}

Table bundles {
  id uuid [primary key]

}

Table containers {
  id uuid [primary key]
  number varchar(255) [not null]
  customs_number varchar(255) [not null]
  container_status enum
  destination varchar(255)
  expected_delivery_date timestamp
  arrival_date timestamp
  notes varchar(255)
  created_at timestamp [default: `now()`]
}

Table suppliers {
  id uuid [primary key]
  name varchar(255)
  address_id uuid [ref: > addresses.id]

}

Table users {
  id uuid [primary key]
  username varchar
  role varchar
  created_at timestamp
}

Table addresses {
  id uuid [primary key]
  street_name varchar(255)
  country_name enum
}

Table sales_orders {
  id uuid [primary key]
}

Table purchase_orders {
  id uuid [primary key]
  created_at timestamp
}

Table supplier_sales_orders {
  id uuid [primary key]
  supplier_id uuid [ref: > suppliers.id]
}

Table invoices {
  id uuid [primary key]
  counterparty_id uuid [ref: - customers.id]
  invoice_status enum [default: invoice_status.draft]
  created_at timestamp [default: `now()`]
  issued_at timestamp
  paid_at timestamp
  voided_at timestamp
}

Table customers {
  id uuid [primary key]
}

Table invoice_lines {
  id uuid [primary key]
  invoice_id uuid [ref: > invoices.id]
  amount_cents bigint
  tax_cents bigint
}

enum invoice_status {
  "draft"
  "issued"
  "paid"
  "voided"
}

enum container_status {
  "in-transit"
  "arrived-at-port"
  "awaiting-pickup"
  "unloaded"
}

enum material_type {
  "quartzite"
  "granite"
  "marble"
  "dolomite"
  "crystal"
  "soapstone"
  "quartz"
  "porcelain"
  "travertine"
}

enum color_family {
  "white"
  "off-white"
  "beige"
  "light-grey"
  "middle-grey"
}

enum stage {
  "purchased"
  "received"
  "sold"
  "returned"
}

enum quality_grade {
  "low"
  "medium"
  "high"
}
